# filesize-cli

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TEST.md  coverage.xml  install.sh  pyproject.toml  requirements.txt  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release  release.yml
homebrew/: filesize-cli.rb
scripts/: update_homebrew_sha.sh
src/filesize_cli/: __init__.py  cli.py
tests/: test_cli.py
